--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
   },
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
-    "@electron-toolkit/utils": "^2.0.0"
+    "@electron-toolkit/utils": "^2.0.0",
+    "@element-plus/icons-vue": "^2.1.0",
+    "@nut-tree/nut-js": "^3.1.2",
+    "clipboard-event": "^1.6.0",
+    "element-plus": "^2.3.14"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.1",
