--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@element-plus/icons-vue": "^2.1.0",
     "@nut-tree/nut-js": "^3.1.2",
     "clipboard-event": "^1.6.0",
-    "element-plus": "^2.3.14"
+    "element-plus": "^2.3.14",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@electron-forge/cli": "^6.4.2",
     "@electron-toolkit/eslint-config": "^1.0.1",
     "@electron-toolkit/eslint-config-ts": "^1.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
