--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nut-tree/nut-js": "^3.1.2",
     "clipboard-event": "^1.6.0",
     "element-plus": "^2.4.2",
+    "pinia": "^2.1.7",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
@@ -38,7 +39,7 @@
     "@vitejs/plugin-vue": "^4.4.1",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
-    "electron": "^27.1.0",
+    "electron": "^26.6.0",
     "electron-builder": "^24.6.4",
     "electron-vite": "^1.0.28",
     "eslint": "^8.53.0",
