--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clip",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "An Electron application with Vue and TypeScript",
   "main": "./out/main/index.js",
   "author": "example.com",
@@ -24,8 +24,9 @@
     "@electron-toolkit/utils": "^3.0.0",
     "@element-plus/icons-vue": "^2.3.1",
     "@nut-tree/nut-js": "^3.1.2",
+    "auto-launch": "^5.0.6",
     "clipboard-event": "^1.6.0",
-    "element-plus": "^2.4.4",
+    "element-plus": "^2.5.3",
     "pinia": "^2.1.7",
     "vue-router": "^4.2.5"
   },
@@ -34,22 +35,22 @@
     "@electron-toolkit/eslint-config": "^1.0.2",
     "@electron-toolkit/eslint-config-ts": "^1.0.1",
     "@electron-toolkit/tsconfig": "^1.0.1",
-    "@rushstack/eslint-patch": "^1.6.1",
-    "@types/node": "^20.10.5",
-    "@vitejs/plugin-vue": "^4.5.1",
-    "@vue/eslint-config-prettier": "^8.0.0",
+    "@rushstack/eslint-patch": "^1.7.0",
+    "@types/node": "^20.11.5",
+    "@vitejs/plugin-vue": "^5.0.3",
+    "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
-    "electron": "^26.6.3",
+    "electron": "^28.1.4",
     "electron-builder": "^24.9.1",
-    "electron-vite": "^1.0.29",
+    "electron-vite": "^2.0.0",
     "eslint": "^8.56.0",
-    "eslint-plugin-vue": "^9.19.2",
+    "eslint-plugin-vue": "^9.20.1",
     "highlight.js": "^11.9.0",
     "less": "^4.2.0",
-    "prettier": "^3.1.1",
+    "prettier": "^3.2.4",
     "typescript": "^5.3.3",
-    "vite": "^4.5.1",
-    "vue": "^3.3.13",
+    "vite": "^5.0.12",
+    "vue": "^3.4.15",
     "vue-tsc": "^1.8.27"
   }
 }
